--- a/scss/partials/_buttons.scss
+++ b/scss/partials/_buttons.scss
@@ -7,11 +7,12 @@
 
 .ui-btn-group {
   .ui-btn:not(:last-child) {
-    margin-right: 0.85rem;
+    margin-right: 1rem;
   }
 }
 
 /* General Button Style */
+
 .ui-btn {
   font-family: $font-secondary;
   font-size: 15px;
@@ -29,7 +30,7 @@
   @include btn-fade;
 
   @include isMedium {
-    width: 240px;
+    width: auto;
     padding: 1rem 1rem;
   }
 }
@@ -86,62 +87,6 @@
     color: $color-white;
     border: 1px solid lighten(#6C7B8E, 10);
     background-color: lighten(#6C7B8E, 10);
-    text-decoration: none;
-  }
-}
-
-/* Light Accent Button Color ************************************************ */
-.ui-btn-light-accent {
-  background-color: $color-light;
-  border: 1px solid $color-light;
-  color: $color-white;
-
-  &:hover {
-    color: $color-white;
-    border: 1px solid lighten($color-light, 10);
-    background-color: lighten($color-light, 10);
-    text-decoration: none;
-  }
-}
-
-/* Light Accent Button Color Outline */
-.ui-btn-light-accent-ol {
-  background-color: transparent;
-  border: 1px solid $color-light;
-  color: $color-light;
-
-  &:hover {
-    color: $color-white;
-    border: 1px solid lighten($color-light, 10);
-    background-color: lighten($color-light, 10);
-    text-decoration: none;
-  }
-}
-
-/* Dark Accent Button Color ************************************************ */
-.ui-btn-dark-accent {
-  background-color: $color-light;
-  border: 1px solid $color-light;
-  color: $color-white;
-
-  &:hover {
-    color: $color-white;
-    border: 1px solid lighten($color-light, 10);
-    background-color: lighten($color-light, 10);
-    text-decoration: none;
-  }
-}
-
-/* Dark Accent Button Color Outline */
-.ui-btn-dark-accent-ol {
-  background-color: transparent;
-  border: 1px solid $color-light;
-  color: $color-light;
-
-  &:hover {
-    color: $color-white;
-    border: 1px solid lighten($color-light, 10);
-    background-color: lighten($color-light, 10);
     text-decoration: none;
   }
 }
