--- a/scss/modules/_config.scss
+++ b/scss/modules/_config.scss
@@ -9,6 +9,11 @@ body {
   overflow: hidden;
 }
 
+.containerish-fluid {
+  width: 100%;
+  overflow: hidden;
+}
+
 .container {
   width: 100%;
   max-width: 1300px;
