--- a/scss/partials/_sections.scss
+++ b/scss/partials/_sections.scss
@@ -383,3 +383,169 @@
     }
   }
 }
+
+/* what to expect */
+.whattoexpect {
+  padding: 40px 20px;
+  position: relative;
+  overflow: hidden;
+
+  @include isXLarge {
+    padding: 80px 20px;
+  }
+
+  .dashed-line {
+    display: none;
+
+    @include isXLarge {
+      display: block;
+      position: absolute;
+      width: 65%;
+      top: -50%;
+    }
+  }
+
+  .video-section {
+    display: grid;
+    row-gap: 1rem;
+
+    @include isLarge {
+      grid-template-columns: 1fr 1fr;
+      column-gap: 1rem;
+    }
+
+    @include isXLarge {
+      width: 1100px;
+      margin: 0 auto;
+      row-gap: 0;
+      column-gap: 3rem;
+    }
+
+    .col-left,
+    .col-right {
+      text-align: center;
+    }
+  }
+
+  .content-section {
+    background: $color-light;
+    position: relative;
+    max-width: 1100px;
+    margin: 4rem auto 4rem auto;
+    padding: 6rem 0;
+
+    @include isXLarge {
+      height: 1000px;
+    }
+
+    @include isRetina {
+      height: 1500px;
+    }
+
+    .plus {
+      display: none;
+
+      @include isXLarge {
+        display: block;
+        height: 43px;
+        width: 43px;
+      }
+
+      &.plus-1 {
+        position: absolute;
+        top: -45px;
+        left: -45px;
+      }
+
+      &.plus-2 {
+        position: absolute;
+        bottom: -45px;
+        right: -45px;
+      }
+    }
+
+    .row-1 {
+      display: grid;
+
+      @include isLarge {
+        grid-template-columns: 1fr 1fr;
+        align-items: center;
+      }
+
+      @include isXLarge {
+        width: calc(100% + 40px);
+        grid-template-columns: 1fr 51.7%;
+      }
+
+      @include isRetina {
+        width: calc(100% + 60px);
+        grid-template-columns: 1fr 52.5%;
+      }
+
+      .col-left {
+        padding: 2rem;
+
+        @include isXLarge {
+          padding: 4rem;
+        }
+      }
+
+      .col-right {
+        background: url('../../images/whattoexpect-img@2x.jpg') center / cover;
+        height: 400px;
+
+        @include isRetina {
+          height: 650px;
+        }
+      }
+    }
+
+    .row-2 {
+      display: grid;
+
+      @include isLarge {
+        grid-template-columns: 1fr 1fr;
+        align-items: center;
+      }
+
+      @include isXLarge {
+        width: calc(100% + 40px);
+        position: absolute;
+        right: 0;
+        grid-template-columns: 51.8% 1fr;
+      }
+
+      @include isRetina {
+        width: calc(100% + 60px);
+        grid-template-columns: 52.5% 1fr;
+      }
+
+      .col-left {
+        padding: 2rem;
+
+        @include isLarge {
+          grid-column: 2;
+          grid-row: 1;
+        }
+
+        @include isXLarge {
+          padding: 4rem;
+        }
+      }
+
+      .col-right {
+        background: url('../../images/candidate-img@2x.jpg') center / cover;
+        height: 400px;
+
+        @include isLarge {
+          grid-column: 1;
+          grid-row: 1;
+        }
+
+        @include isRetina {
+          height: 650px;
+        }
+      }
+    }
+  }
+}
