--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -3,7 +3,180 @@
 /* ************************************************************************** */
 
 /* footer 1 ***************************************************************** */
-.footer-1 {}
+.footer-1 {
+  background: $color-main;
+  min-height: 100px;
+  padding: 40px 20px;
+
+  @include isMedium {
+    padding: 60px 20px;
+  }
+
+  @include isXLarge {
+    padding: 80px 20px;
+  }
+
+  .containerish {
+    display: grid;
+    border-top: 1px solid $color-white;
+
+    @include isLarge {
+      grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    @include isXLarge {
+      grid-template-columns: 1fr 1fr 1.3fr;
+    }
+
+    .col-left {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 40px 20px;
+      border-bottom: 1px solid $color-white;
+
+      .footer-logo {
+        height: 150.68px;
+        width: 225.84px;
+      }
+
+      @include isLarge {
+        border-bottom: none;
+        border-right: 1px solid $color-white;
+        padding: 2rem;
+      }
+
+      @include isXLarge {
+        padding: 3rem;
+      }
+    }
+
+    .col-middle {
+      padding: 40px 20px;
+      border-bottom: 1px solid $color-white;
+
+      @include isLarge {
+        border-bottom: none;
+        border-right: 1px solid $color-white;
+        padding: 2rem;
+      }
+
+      @include isXLarge {
+        padding: 3rem;
+      }
+    }
+
+    .col-right {
+      padding: 40px 20px;
+
+      @include isLarge {
+        padding: 2rem;
+      }
+
+      @include isXLarge {
+        padding: 3rem;
+      }
+
+      .footer-links {
+        display: grid;
+
+        @include isXLarge {
+          grid-template-columns: 1fr 1fr;
+          column-gap: 2rem;
+        }
+
+        .links-left {
+          display: flex;
+          flex-direction: column;
+        }
+
+        .links-right {
+          display: flex;
+          flex-direction: column;
+        }
+      }
+    }
+  }
+}
 
 /* footer 2 ***************************************************************** */
-.footer-2 {}
+.footer-2 {
+  background: $color-light;
+  min-height: 40px;
+  display: flex;
+  align-items: center;
+  transition: all .3s ease-out;
+  padding: 0 1rem;
+
+  @include isMedium {
+    padding: 0 1rem;
+  }
+
+  @include isRetina {
+    padding: 0;
+  }
+
+  .containerish {
+    display: grid;
+    align-items: center;
+
+    @include isLarge {
+      grid-template-columns: max-content 1fr max-content;
+      align-items: center;
+    }
+
+    .col-left {
+      display: none;
+
+      @include isLarge {
+        display: flex;
+        justify-content: flex-start;
+      }
+
+
+      .topbar-link {
+        font-size: 1rem;
+      }
+
+      .topbar-link:not(:last-child) {
+        margin-right: 1rem;
+      }
+
+      @include isLarge {
+        &.active {
+          opacity: 0;
+        }
+      }
+    }
+
+    .col-middle {}
+
+    .col-right {
+      display: none;
+
+      @include isLarge {
+        display: inline-flex;
+        justify-content: flex-end;
+      }
+
+      @include isRetina {
+        .topbar-link:not(:last-child) {
+          margin-right: 1.5rem;
+        }
+      }
+    }
+  }
+
+  .footer-link-2 {
+    font-weight: 600;
+    font-size: 15px;
+    line-height: calc(12px * 1.5);
+    font-family: $font-secondary;
+    color: $color-main !important;
+
+    &:hover {
+      color: $color-light;
+      text-decoration: none;
+    }
+  }
+}
